# P4J

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.travis/: install.sh
P4J/: .periodogram.py.swp  AOV.c  AOV.pyx  LKSL.c  LKSL.pyx  MHAOV.c  MHAOV.pyx  PDM.c  PDM.pyx  QMI.c  QMI.pyx  __init__.py  aux.c  aux.pxd  aux.pyx  base_periodogram.py  dictionary.py  generator.py  math.py  periodogram.py  periodograms.py  regression.py  utilities.c  utilities.pxd
P4J/algorithms/: analysis_of_variance.c  analysis_of_variance.html  analysis_of_variance.pyx  multiharmonic_aov.c  multiharmonic_aov.html  multiharmonic_aov.pyx  mutual_information.c  mutual_information.html  mutual_information.pyx  phase_dispersion_minimization.c  phase_dispersion_minimization.html  phase_dispersion_minimization.pyx  string_length.c  string_length.html  string_length.pyx  utilities.c  utilities.html  utilities.pxd  utilities.pyx
P4J/demos/: periodogram_demo.ipynb
P4J/demos/.ipynb_checkpoints/: periodogram_demo-checkpoint.ipynb
P4J/tests/: generate_curves.py  multiband_light_curve.csv  single_band_light_curve.csv  test_generator.py  test_mhaov.py  test_multiband_periodogram.py  test_periodogram.py
examples/: experiments.ipynb  periodogram_demo.ipynb  regression_demo.ipynb
src/P4J/: __init__.py  base_periodogram.py  generator.py
src/P4J/algorithms/: multiharmonic_aov.pyx  phase_dispersion_minimization.pyx  utilities.pyx
