[project]
name = "P4J"
dynamic = ["version"]
dependencies = [
  "numpy>1.9.0",
  "scipy"
]
requires-python = ">=3.8"
authors = [{name = "Pablo Huijse", email = "pablo.huijse@gmail.com"}]
description = "Periodic light curve analysis tools based on Information Theory"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["astronomy", "time series", "period estimation", "information theory"]
classifiers = [
  "Natural Language :: English",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python",
  "Programming Language :: Cython",
]


[project.urls]
Homepage = "https://github.com/phuijse/P4J"
Repository = "https://github.com/phuijse/P4J"

[build-system]
requires = ["setuptools", "wheel", "numpy", "Cython>=3.0"]
build-backed = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "P4J.__version__"}
